@@ -1,3 +1,4 @@
+* Add support for plugins
 * Add support for expand, height and width attributes
 * Add drag & drop support on attachment button
 
